--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ p {
 
 .white {
   color: #fff;
+  text-shadow: 3px 3px 5px #000000;
 }
 
 .btn {
@@ -15,6 +16,7 @@ p {
   color: #fff;
   border-radius: 12px;
   border-color: #3c5abe;
+  transition: all 200ms linear;
 }
 
 .btn:hover {
@@ -33,6 +35,7 @@ nav {
 
 a {
   color: #fff;
+  transition: all 200ms linear;
 }
 
 a:hover {
@@ -45,6 +48,15 @@ a:hover {
 
 .gradient {
   background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+.gradient-d {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+.cards {
+  background-color: #161c2e;
+  color: #fff;
 }
 
 footer {
